--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,9 @@
+.main-container {
+  height: 100%;
+  min-height: 100vh;
+  background-size: cover !important;
+}
+
 #my-canvas {
   position: absolute;
   height: 100%;
